Prevent URL too long in bookings list search

--- a/admin/css/tmsm-aquatonic-course-booking-admin.less
+++ b/admin/css/tmsm-aquatonic-course-booking-admin.less
@@ -274,17 +274,24 @@
     }
 }
 
-#tmsm-aquatonic-course-booking-settings-filter .wp-list-table{
-    td, th{
-        //white-space: nowrap;
+#tmsm-aquatonic-course-booking-settings-table{
+    .wp-list-table{
+        td, th{
+            //white-space: nowrap;
+        }
+        .column-course_start, .column-date_created{
+            white-space: nowrap;
+        }
+        td.column-email{
+            font-size: 70%;
+        }
+        td.column-status {
+            font-size: 80%;
+        }
     }
-    .column-course_start, .column-date_created{
-        white-space: nowrap;
-    }
-    td.column-email{
-        font-size: 70%;
-    }
-    td.column-status {
-        font-size: 80%;
+
+    .tablenav{
+        clear: none;
     }
 }
+
